Fix bug of less places not appearing an scrollbar

--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     box-sizing: border-box;
     margin: 0;
-    padding: 20px;
+    padding: 16px;
     min-width: 400px;
-    max-width: 600px;
     font-family: Arial, sans-serif;
     text-align: center;
 }
 
 p {
-    max-width: 600px;
     text-align: justify;
     font-size: 1.2em;
     line-height: 1.4;
-    margin: 15px 0;
 }
 
 button {
@@ -28,9 +24,7 @@ button {
     background-color: lightgray;
     color: black;
     cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    transition: background-color 0.2s ease;
+    margin: 20px 0;
     position: relative;
 }
 
@@ -50,19 +44,16 @@ button:hover {
 
 #placesContainer {
     width: 100%;
-    max-height: 500px;
+    flex: 1;
     overflow-y: auto;
     margin-top: 20px;
+    border-radius: 8px;
 }
 
 .places-list {
     width: 100%;
     display: flex;
     flex-direction: column;
-}
-
-.place-item:last-child {
-    border-bottom: none;
 }
 
 .place-item {
@@ -72,7 +63,7 @@ button:hover {
     text-align: left;
     background-color: #fff;
     transition: background-color 0.2s ease;
-    border-bottom: 1px solid #e0e0e0;
+    border-top: 1px solid #e0e0e0;
 }
 
 .place-name {
